infrastructure/live/test/network/.terragrunt-cache/Jx5VynTLFXBvspw4Vqj3ogvFVfQ/b6mD1V8GETFhdOJgRj7OHbQyXNk/network/main.tf
terraform {
  backend "s3" {}
}

data "aws_availability_zones" "available" {}

resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true # Nodig voor RDS en EFS!
  tags = { Name = "${var.environment}-vpc" }
}

# Public Subnets (voor de Load Balancer)
resource "aws_subnet" "public" {
  count                   = 2 # Altijd 2 voor een ALB in AWS!
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.${count.index}.0/24"
  map_public_ip_on_launch = true
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  tags                    = { Name = "${var.environment}-public-${count.index}" }
}

# Private Subnets (voor App & DB)
resource "aws_subnet" "private" {
  count             = 2
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.${count.index + 10}.0/24"
  availability_zone = data.aws_availability_zones.available.names[count.index]
  tags              = { Name = "${var.environment}-private-${count.index}" }
}

# --- Routing voor Internet in Private Subnets ---

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
}

resource "aws_eip" "nat" {
  domain = "vpc"
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id # NAT moet in een public subnet staan
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }
}

resource "aws_route_table_association" "private" {
  count          = 2
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
